Fix mobile css issue making page unreadable EN-1151 (#624)
* Fix mobile css issue

https://bitrise.atlassian.net/browse/EN-1151

* Only remove right margin on small screen

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -673,7 +673,7 @@ main.content {
 		font-size: 1.7rem;
 	  }
 
-	&:not(:last-child) {
+ 	&:not(:last-child) {
 		margin-right: 20vw;
 	}
 
@@ -1584,8 +1584,11 @@ footer {
 	main.content {
 		width: 90%;
 		margin-left: auto;
-    	margin-right: auto;
     	padding: 8rem 2rem 0 2rem;
+    
+    &:not(:last-child) {
+      margin-right: auto;
+    }
 
 	 .index-container {
 		 flex-direction: column;
